--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.3",
     "nodemon": "^2.0.20",
+    "socket.io": "^4.5.2",
     "uuid": "^9.0.0"
   }
 }
